--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   
 }
 
-.top_menu {
+.top_menu { 
   align-self: center;
   font-family:'Lato', sans-serif;
   font-style: normal;
@@ -40,17 +40,20 @@ body {
   margin:0%
 }
 
-.background {
+.background, .abbackground {
   background-image: url();
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #eeecec;
   filter: saturate(2);
-  
+}
+
+.abbackground {
+  background-color: rgba(39, 42, 49, 0.05);;
+  filter: saturate(2);
 }
 
 #home {
-
   display: flex;
   flex-direction: column;
   margin-left: 7%;
@@ -59,22 +62,31 @@ body {
   
 }
 
-.container {
-  position: fixed;
-  width:100%;
-  height: 60px;
+#abhome {
+  display: flex;
+  flex-direction: column;
+  margin-left: 7%;
+  margin-right: 6%;
+  padding: 0%;;
+  
 }
 
-.hamb {
+.hamb, #hamb {
 padding-top: 15%;
 margin-bottom: 10%;
-
 }
 
-.span1 {
+.span1, .abspan1 {
   font-size: 25px;
   color: rgba(236, 82, 66, 1);
   font-family:'Lato', sans-serif;
+}
+
+.abspan1 {
+  font-size: 25px;
+  color: rgba(236, 82, 66, 1);
+  font-family:'Lato', sans-serif;
+  align-self: center;
 }
 
 .title1 {
@@ -89,13 +101,36 @@ margin-bottom: 10%;
   background-size: 100%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  }
 
+  .abtitle1 {
+
+  margin-top: 3%;
+  font-size: 40px;
+  font-family:'Lato', sans-serif;
+  color: rgb(236, 82, 66, 1);
+  font-weight: 900;
+  text-align: center;
+   
   }
 
 .home-p {
   margin-top: -1%;
   background-color: #d3d3d3;
   border: 3px solid white;
+  font-family:'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  text-align: justify;
+  color: #272a31;
+  padding: 10px;
+  max-width: 1000px;
+}
+
+.abhome-p {
+  margin-top: -1%;
+  background-color: #fff;
+  border: 3px solid rgba(39, 42, 49, 0.4);
   font-family:'Lato', sans-serif;
   font-weight: 300;
   font-size: 18px;
@@ -112,11 +147,46 @@ h2 {
   font-weight: 900;
   color: #272a31;
 }
+
+.abh2 {
+  margin-top: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 16px;
+  font-family:'Lato', sans-serif;
+  font-weight: 300;
+  color: rgba(39, 42, 49, 1);
+  text-align:center;
+}
+
 .span2 {
-  font-size: 18px;
+  font-size: 16px;
   color: #272a31;
   font-family:'Lato', sans-serif;
   margin-bottom: 20%;
+}
+
+.abspan2 {
+
+  font-size: 18px;
+  color: rgba(39, 42, 49, 1);
+  font-family:'Lato', sans-serif;
+  font-weight: 900;
+  margin-bottom: 10%;
+  align-self: center;
+}
+
+.abconfspan2 {
+
+  font-size: 14px;
+  color: rgba(39, 42, 49, 0.5);
+  font-family:'Lato', sans-serif;
+  font-weight: 900;
+  margin-bottom: 10%;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  align-self: center;
 }
 
 .mainprogram {
@@ -126,9 +196,181 @@ h2 {
   flex-direction: column;
   }
 
+  .conferencelogo {
+    display: flex;
+    flex-direction: column;
+    color: rgba(39, 42, 49, 1);
+    font-size: 25px;
+    font-family:'Lato', sans-serif;
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 3%;
+    margin: 0%;
+    border-bottom: 2px solid rgba(39, 42, 49, 0.1); ;
+  }
+
+  .tlogo {
+
+    width:80%;
+    align-self: center;
+    border: 2px solid rgba(39, 42, 49, 0.1);
+    padding: 4%;
+    margin-bottom: 10%;
+  }
+
+  .past {
+    display: flex;
+    flex-direction: column;
+    color: rgba(39, 42, 49, 1);
+    font-size: 25px;
+    font-family:'Lato', sans-serif;
+    text-align: center;
+    padding-top: 5%;
+    margin: 0%;
+    border-bottom: 2px solid rgba(39, 42, 49, 0.1); ;
+  }
+
+  .abconfspan2p {
+    font-size: 14px;
+  color: rgba(39, 42, 49, 0.5);
+  font-family:'Lato', sans-serif;
+  font-weight: 900;
+  margin-bottom: 10%;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  align-self: center;
+  }
+
+  .cole {
+    display: flex;
+    flex-direction: column;
+    background-image: url(./images/colconference.jpg);
+    background-size: contain;
+    margin-right: 7%;
+    margin-left: 7%;
+    margin-bottom: 5%;
+  }
+
+  .h4cole {
+    font-size: 40px;
+    font-family:'Lato', sans-serif;
+    font-weight: 900;
+    text-align: center;
+    color: rgb(255, 255, 255, 1);
+    margin-bottom: 0%;
+    
+
+  }
+
+  .h5cole {
+    font-size: 25px;
+    font-family:'Lato', sans-serif;
+    font-weight: 900;
+    text-align: center;
+    color: #fff;
+    padding-bottom: 10%;
+
+  }
+
+  .ecue {
+    display: flex;
+    flex-direction: column;
+    background-image: url(./images/ecuador.PNG);
+    background-size: contain;
+    margin-left: 7%;
+    margin-right: 7%;
+    margin-bottom: 10%;
+  }
+
+  .h4ecue {
+    font-size: 40px;
+    font-family:'Lato', sans-serif;
+    font-weight: 900;
+    text-align: center;
+    color: rgb(255, 255, 255, 1);
+    
+    
+
+  }
+
+  .h5ecue {
+    font-size: 25px;
+    font-family:'Lato', sans-serif;
+    font-weight: 900;
+    text-align: center;
+    color: #fff;
+    
+    
+
+  }
+
+  .partner, .partnerab {
+    display: flex;
+    flex-direction: column;
+    background-color: #272a31;
+        
+  }
+  
+  .h3partner, .h3partnerab {
+    color: rgba(211, 211, 211, 0.6);
+    font-size: 25px;
+    font-family:'Lato', sans-serif;
+    text-align: center;
+    padding-top: 3%;
+    padding-bottom: 1%;
+    margin: 0%;
+  }
+  
+  .h3partnerdiv, .h3partnerdivab {
+    width:10%;
+    border-color:rgba(236, 82, 66, 1);
+    
+  }
+
+  .ticons, .ticonsab {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 3%;
+    gap: 3%;
+    margin-bottom: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .ticon1, .ticon1ab {
+
+    width:30%;
+    margin-top: 2%;
+    height:80px;
+  }
+
+  .footer, .footerab {
+    display:flex;
+    margin-top: 5%;
+    
+  }
+
+  .cclogo, .cclogoab {
+    width:40%;
+    height: 30%;
+    margin-left: 7%;
+    margin-bottom: 7%;
+  }
+  .footspan, .footspanab {
+    font-size: 12px;
+    color: rgba(39, 42, 49, 0.7);
+    font-family:'Lato', sans-serif;
+    font-weight: 600;
+    margin-top: 2%;
+    margin-left: 7%;
+    margin-right: 5%;
+    margin-bottom: 3%;
+
+  }
+
 .mp {
   color: #fff;
-  font-size: 25px;
+  font-size: 30px;
   font-family:'Lato', sans-serif;
   text-align: center;
   padding-top: 5%;
@@ -136,7 +378,24 @@ h2 {
   margin: 0%;
 }
 
+.abh3conf {
+  color: rgba(39, 42, 49, 0.7);
+  font-size: 20px;
+  font-family:'Lato', sans-serif;
+  text-align: center;
+  padding-top: 5%;
+  padding-bottom: 3%;
+  margin-left:7%;
+  margin-right: 7%;
+}
+
 .division_mh3 {
+  width:12%;
+  margin-top: 1%;
+  border-color:rgba(236, 82, 66, 1);
+}
+
+.abdivision_mh3 {
   width:12%;
   margin-top: 1%;
   border-color:rgba(236, 82, 66, 1);
@@ -171,9 +430,10 @@ color: #fff;
 font-weight: 300;
 font-family:'Lato', sans-serif;
 width:50%;
+font-size: 14px;
 }
 
-.p1b {
+.p1button1 {
 
 background-color: rgba(236, 82, 66, 1);
 color: #d3d3d3;
@@ -205,7 +465,7 @@ border-style: none;
   margin: 0%;
 }
 
-.division_fh3 {
+.division_fh3, .confdivision_mh3 {
   width:12%;
   border-color:rgba(236, 82, 66, 1);
   
@@ -254,8 +514,8 @@ flex-direction: column;
 
 .feat1p2 {
   color:#272a31;
-  font-size: 9px;
-  font-weight: 300;
+  font-size: 12px;
+  font-weight: 600;
   font-family:'Lato', sans-serif;
   width: 95%;
   margin-top: 0%;
@@ -301,12 +561,9 @@ align-self: center;
   
   }
 
-
-
 .showmobile {
   display: flex;
-  
-}
+  }
 
 .hidemobile {
   display:none;
@@ -315,6 +572,7 @@ align-self: center;
 .showcontent {
   display: initial;
 }
+
 
 
 
@@ -386,11 +644,291 @@ padding-top: 0.5%;
 }
 
 #home {
-  margin-top: 20%;
+  
+  margin-left: 15%;
+  margin-bottom: 0%;
 }
 
+#abhome {
+  
+   margin-bottom: 0%;
+   text-align: center;
+}
+.title1 {
+  font-size: 60px;
+  width: 60%;
+  margin-top: 2%;;
+}
+.abtitle1 {
+  font-size: 50px;
+  width: 60%;
+  margin-top: 2%;
+  align-self: center;
+}
 
+.span1, .abspan1 {
+  margin-top: 10%;
+  font-size: 30px;
+  font-weight: 600;
+}
 
+.abspan1 {
+  margin-top: 10%;
+  font-size: 30px;
+  font-weight: 600;
+  align-self: center;
+}
+
+.home-p {
+  width: 50%;
+  border: 2px solid rgb(255, 255, 255, 0.8);
+  background-color: #eeecec;;
+}
+
+.abdivision_mh3 {
+  width: 3%;
+
+}
+.abhome-p {
+  margin-top: 2%;
+  width: 45%;
+  align-self: center;
+  text-align: center;
+  border: 2px solid rgba(39, 42, 49, 0.3);
+  color:rgb(39, 42, 49, 0.8);
+  font-size: 18px;
+  line-height: 25px;
+  
+}
+
+h2 {
+  font-size: 40px;
+  color:rgba(39, 42, 49, 0.8);
+}
+
+.abh2{
+  margin-top: 3%;
+  font-size: 15px;
+  width:40%;
+  align-self: center;
+  color:rgba(39, 42, 49, 0.5);
+  font-weight: 900;
+}
+
+.span2 {
+  font-size: 25px;
+  font-weight: 600;
+  color:rgb(39, 42, 49, 0.8);
+  margin-bottom: 15%;
+}
+
+.abspan2 {
+  font-size: 15px;
+  font-weight: 600;
+  color:rgb(39, 42, 49, 0.8);
+  text-decoration: underline;
+}
+
+.division_mh3 {
+  width: 4%;
+  margin-top: 0%;
+}
+
+.mainpdesk {
+
+  display: flex;
+  justify-content: space-between;
+  max-width: 80%;
+  margin: 3% auto;
+  box-sizing: border-box;
+
+}
+
+.p1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 19.5%;
+  margin: 0;
+  box-sizing: border-box;
+  height:260px;
+  padding:2%;
+  text-align: center;
+  gap: 7%;
+}
+
+.h41, .h42, .h43, .h44, .h45 {
+
+  margin: 0;
+  width: 100%;
+   
+}
+
+.p1p1, .p1p2, .p1p3, .p1p4, .p1p5 {
+  line-height: 15px;
+  font-size: 16px;
+  margin: 0;
+  width: 100%;
+}
+
+.p1button2 {
+
+color: rgb(255, 255, 255, 0.8);
+background-color:transparent;
+text-decoration: underline;
+font-weight: 600;
+font-family:'Lato', sans-serif;
+font-size: 20px;
+align-self: center;
+margin-bottom: 7%;
+margin-top: 3%;
+border-style: none;
+}
+
+.p1button1 {
+  display:none;
+}
+
+.conferencelogo {
+  margin:0;
+  padding:0;
+}
+.abh3conf {
+  margin-top:5%;
+  padding:0;
+  font-size: 25px;
+}
+.abconfspan2 {
+  display: none;
+}
+
+.abconfspanlong {
+margin-top: 3%;
+font-size: 13px;
+font-weight: 600;
+color: rgba(48, 47, 47, 0.6); 
+width: 70%;
+align-self: center;
+}
+
+.tlogo {
+  margin-top: 5%;
+  width: 40%;
+  margin-bottom: 5%;
+}
+
+.past {
+  margin-top: 0;
+  padding: 0;
+}
+.abconfspan2p {
+font-size: 13px;
+font-weight: 600;
+color: rgba(48, 47, 47, 0.6); 
+width: 80%;
+align-self: center;
+}
+.imagesdesk {
+  margin-top: 4%;
+  display:flex;
+  justify-content: center;
+  gap: 2%;
+  margin-bottom: 7%;
+}
+
+.cole {
+  width:40%;
+  height: 250px;
+  margin: 0;;
+}
+.ecue {
+  width: 40%;
+  height: 250px;
+  margin: 0;
+}
+.partner {
+  display:none;
+}
+.partnerab {
+  display:flex;
+ align-items: center;
+ 
+  }
+
+  .h3partnerab {
+    margin-top: 2%;
+    padding: 1%;
+    color: rgba(211, 211, 211, 0.7);
+  }
+  
+  .h3partnerdivab {
+    width:3%;
+    margin-top: 0;
+
+  }
+
+  .ticonsab {
+    width: 95%;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    gap: 2%;
+    margin-bottom: 4%;
+       
+  }
+
+  .ticon1ab {
+width: 12%;
+height: 100px;
+margin-top: 3%;;
+  }
+
+.footer {
+  margin-top: 0;
+  background-color:rgb(48, 47, 47); 
+  justify-content: center;
+}
+
+.cclogo {
+  display: none;
+}
+
+.cclogodark {
+  margin-top: 3%;
+  margin-bottom: 3%;
+  
+}
+
+.footspan {
+  margin-top: 5%;
+  font-size: 12px;
+  color: rgba(211, 211, 211, 0.7);
+
+  
+  }
+
+.footerab {
+  margin: 2% 13%;
+  display:flex;
+  width: 85%;
+  margin-bottom: 0;
+  
+
+}
+
+.cclogoab {
+margin-top:2%;
+width: 20%;
+height: 50px;
+padding: 0;
+margin-bottom: 5%;
+}
+
+.footspanab {
+margin-top: 3%;
+font-size: 16px;
+
+}
 
 }
 
@@ -410,6 +948,25 @@ display:none;
 
 .logo {
 display:none;
+}
+
+.p1button2 {
+  display:none;
+}
+
+.partnerab {
+  display: none;
+}
+
+.footerab {
+  display: none;
+}
+.cclogodark {
+  display: none;
+}
+
+.abconfspanlong {
+display: none;
 }
 
 }
