fix home cadrs desktop grid

--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,13 @@ h2 {
   margin-bottom: 5%;
 }
 
+.backgcolor {
+background-color: rgba(236, 82, 66, 1);
+mix-blend-mode: hard-light;
+height: 100%;
+
+}
+
 .h4cole {
   font-size: 40px;
   font-family: 'Lato', sans-serif;
@@ -269,7 +276,7 @@ h2 {
 .ecue {
   display: flex;
   flex-direction: column;
-  background-image: url(./images/ecuador.PNG);
+  background-image: url(./images/ecuconference.jpg);
   background-size: contain;
   margin-left: 7%;
   margin-right: 7%;
@@ -580,6 +587,42 @@ h2 {
 }
 
 @media (min-width: 768px) {
+
+  .card3, .card4, .card5, .card6 {
+    display:flex;
+  }
+
+  .f1bdown, .f1bup {
+display:none;
+  }
+
+  #featcards {
+   display: grid;
+   align-self: center;
+   margin-bottom: 5%;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      gap: 1% 1%;
+      grid-auto-flow: row;
+      justify-items: stretch;
+      align-items: stretch;
+      grid-template-areas:
+        "card1 card2"
+        "card3 card4"
+        "card5 card6";
+      width: 70%;
+      height: 70%;
+    }
+    
+    .card1 { grid-area: card1; }
+    .card2 { grid-area: card2; }
+    .card3 { grid-area: card3; }
+    .card4 { grid-area: card4; }
+    
+    .card5 { grid-area: card5; }
+    
+    .card6 { grid-area: card6; }
+    
   .desk_menu {
     background-color: #272a31;
     width: 100%;
